2007-06-11  Robert Ancell  <robert.ancell@gmail.com>

	* src/lib/scene/human.py: Clicking a second time on a selected square
	  deselects it (sf.net bug #1729938)

2007-06-10  Robert Ancell  <robert.ancell@gmail.com>

	* src/lib/ai.py: Use correct pid not 0 for killing AIs (Bug #443073)
                         This is a severe bug that causes the X server to be
                         killed accidentally on some systems

2007-06-03  Robert Ancell  <robert.ancell@gmail.com>

	* src/lib/main.py: Catch IOError on explicitly loaded games (Bug #442383)

2007-05-28  Robert Ancell  <robert.ancell@gmail.com>

	* Change 2D knights to face left (Bug #434496)

2007-05-16  Robert Ancell  <robert.ancell@gmail.com>

	* Don't animate rotation on startup or when changing between 2/3D

2007-05-16  Robert Ancell  <robert.ancell@gmail.com>

	* src/lib/cairo/__init__.py: Speed up 2D rotating
        * Add board numbering for 2D mode (Bug #392286)

2007-05-15  Andreas Røsdal  <andreasr@gnome.org>

	* src/lib/defaults.py.in:
	* src/lib/gtkui/gtkui.py: Fix spelling of GNOME, and get
	translation credits from translation instead of hardcoding it.
	This is consistent with GNOME practices and the other gnome-games.

2007-04-29  Robert Ancell  <robert.ancell@gmail.com>

	* Set more configuration defaults in case schema is missing (Bug #434097)
        * Use configured data dir for autosaves, not ~/.glchess
        * Execute AIs in ~/.gnome2/glchess/logs to avoid making files in ~ (Bug #424010)
        * Fix visible resizing when starting up
        * Save window maximised state (Bug #404554)
	* Only save window size on quit

2007-04-25  Robert Ancell  <robert.ancell@gmail.com>

	* Update dummy OpenGL scene to have correct method arguments (Bug #420730)

2007-04-22  Robert Ancell  <robert.ancell@gmail.com>

	* Changed AI process management to remove os.forkpty() (not on Solaris) (Bug #426538)
	* If an AI dies the game completes and the UI displays "opponent has died". This is