@@ -1,5 +1,10 @@
 2007-06-11  Robert Ancell  <robert.ancell@gmail.com>
 
+	* src/lib/gtkui/gtkui.py, dialogs.py: Gracefully handle not being able
+	  to get tooltip style (bug #459740)
+
+2007-06-11  Robert Ancell  <robert.ancell@gmail.com>
+
 	* src/lib/scene/human.py: Clicking a second time on a selected square
 	  deselects it (sf.net bug #1729938)
 
